frontend/tests/errors/ER-032/fixed_non_native_fractional_compound_mul_not_implemented/test.vx
!!a:#u40.40;
!!b:#u40.40;

&^main() -> #i32 {
  a *= b;
  0
}
